correct btn wrap

--- a/src/assets/scss/parts/_slider.scss
+++ b/src/assets/scss/parts/_slider.scss
@@ -186,12 +186,12 @@
 
   @media screen and (min-width: 1024px) {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: calc(50% - 50rem);
     display: flex;
 
     width: 100rem;
-    height: 60rem;
+    height: 4rem;
   }
 }
 
